login on gui implemented